--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
     "babel-loader": "9.1.2",
+    "copy-webpack-plugin": "11.0.0",
     "eslint": "8.38.0",
     "eslint-config-htmlacademy": "9.0.0",
-    "copy-webpack-plugin": "11.0.0",
     "html-webpack-plugin": "5.5.1",
     "webpack": "5.79.0",
     "webpack-cli": "5.0.1",
@@ -29,5 +29,8 @@
   },
   "engines": {
     "node": "20"
+  },
+  "dependencies": {
+    "dayjs": "1.11.19"
   }
 }
