--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "eslint-config-htmlacademy": "9.0.0",
     "html-webpack-plugin": "5.5.1",
     "style-loader": "3.3.2",
-    "webpack": "5.79.0",
+    "webpack": "5.94.0",
     "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.13.3"
+    "webpack-dev-server": "5.2.1"
   },
   "engines": {
     "node": "20"
   },
   "dependencies": {
-    "dayjs": "1.11.19"
+    "dayjs": "1.11.19",
+    "nanoid": "5.0.9"
   }
 }
